--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.552.0",
     "mongoose": "^8.19.3",
@@ -19,6 +20,7 @@
     "posthog-js": "^1.288.1",
     "posthog-node": "^5.11.2",
     "react": "19.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1"
   },
